[package]
authors.workspace = true
name = "feagi-pns"
edition.workspace = true
version = "0.0.50-beta.61"
license.workspace = true
description = "Peripheral Nervous System (PNS) - Data processing, caching, and neuron voxel encoding for FEAGI agents"
repository.workspace = true
homepage.workspace = true


[dependencies]
ndarray = { workspace = true, features = ["rayon"] }
feagi-data-structures = { workspace = true }
feagi-data-serialization = { workspace = true }
image = {workspace = true}
rayon = { workspace = true}
paste = { workspace = true}
serde = { workspace = true }
serde_json = {workspace = true}
tracing = "0.1"

[dev-dependencies]
clap = { version =  "4.5.53", features = ["derive"] }
