[package]
name = "feagi-runtime-embedded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded runtime adapter for FEAGI (ESP32, RTOS, no_std)"
publish = false

[features]
default = []
std = []

[dependencies]
# Platform-agnostic core (no_std compatible)
feagi-types = { path = "../feagi-types" }
feagi-neural = { path = "../feagi-neural" }
feagi-synapse = { path = "../feagi-synapse" }

# Embedded dependencies (no_std)
spin = "0.9"  # Spinlock-based Mutex (no OS required)

[dev-dependencies]
# For tests (std environment)


