[package]
name = "feagi-runtime-embedded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded runtime adapter for FEAGI (ESP32, RTOS, no_std)"

[features]
default = []
std = []

[dependencies]
# Runtime trait definitions
feagi-runtime = { path = "../feagi-runtime" }

# Platform-agnostic core (no_std compatible, types + algorithms)
feagi-neural = { path = "../feagi-neural" }

# Embedded dependencies (no_std)
spin = "0.9"  # Spinlock-based Mutex (no OS required)

[dev-dependencies]
# For tests (std environment)


