[package]
name = "feagi-runtime-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard runtime adapter for FEAGI (Desktop/Server)"

[features]
default = ["std"]
std = []

[dependencies]
# Runtime trait definitions
feagi-runtime = { path = "../feagi-runtime" }

# Platform-agnostic core (types + algorithms)
feagi-neural = { path = "../feagi-neural" }

# Standard library dependencies
rayon = { workspace = true }  # Parallel processing
ahash = { workspace = true }  # Fast hashing
thiserror = { workspace = true }  # Error handling

[dev-dependencies]

