[package]
name = "feagi-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime abstraction traits for FEAGI neural processing across platforms"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
feagi-neural = { path = "../feagi-neural", default-features = false }
# No dependencies - pure trait definitions
# This ensures the trait crate is minimal and can be used anywhere

[dev-dependencies]
# For tests only

