[package]
authors.workspace = true
name = "feagi-sensorimotor"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Sensorimotor System - Data processing, caching, and neuron voxel encoding for FEAGI agents (sensory input and motor output)"
repository.workspace = true
homepage.workspace = true


[dependencies]
ndarray = { workspace = true, features = ["rayon"] }
feagi-structures = { version = "0.0.1-beta.1", path = "../feagi-structures" }
feagi-serialization = { version = "0.0.1-beta.1", path = "../feagi-serialization" }
image = {workspace = true}
rayon = { workspace = true}
paste = { workspace = true}
serde = { workspace = true }
serde_json = {workspace = true}
tracing = "0.1"

[dev-dependencies]
clap = { version =  "4.5.53", features = ["derive"] }
