[package]
name = "feagi-sensorimotor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sensorimotor System - Data processing, caching, and neuron voxel encoding for FEAGI agents (sensory input and motor output)"


[dependencies]
ndarray = { workspace = true, features = ["rayon"] }
feagi-structures = { workspace = true }
feagi-serialization = { workspace = true }
image = {workspace = true}
rayon = { workspace = true}
paste = { workspace = true}
serde = { workspace = true }
serde_json = {workspace = true}
tracing = "0.1"

[dev-dependencies]
clap = { version =  "4.5.53", features = ["derive"] }
