[package]
name = "feagi-serialization"
version = "0.0.1-beta.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Adds serialization and deserialization to select Feagi Data Structures."


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
byteorder = "1.5.0"
feagi-structures = { version = "=0.0.1-beta.8", path = "../feagi-structures" }

