[package]
name = "feagi-serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Adds serialization and deserialization to select Feagi Data Structures."


[dependencies]
serde_json = { workspace = true }
byteorder = "1.5.0"
getrandom = "0.2"
feagi-structures = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
