[package]
name = "feagi-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FEAGI Service Layer - Stable application boundary for transport adapters"

[lib]
crate-type = ["rlib"]
name = "feagi_services"

[dependencies]
# Core FEAGI crates (backend)
feagi-neural = { path = "../feagi-neural" }  # For types
feagi-evo = { path = "../feagi-evo" }
feagi-bdu = { path = "../feagi-bdu", default-features = false }
feagi-burst-engine = { path = "../feagi-burst-engine", default-features = false }
# feagi-pns dependency removed to break circular dependency
# AgentRegistry and types moved to feagi-services
feagi_data_structures = { workspace = true }

# Async runtime (optional for embedded)
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "time", "rt-multi-thread"], optional = true }

# Synchronization
parking_lot = "0.12"

# Serialization (for DTOs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
feagi-observability = { workspace = true }
tracing = "0.1"  # Required for tracing macros

# Error handling
thiserror.workspace = true

# Logging (replaced by feagi-observability)
# log = "0.4"  # Removed - use feagi-observability instead

# Time/date
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = ["std"]
std = ["tokio", "feagi-bdu/async-tokio", "feagi-burst-engine/async-tokio"]  # Enable async for server deployments
no_std = []      # Disable async for embedded/RTOS
wasm = ["feagi-bdu/wasm", "feagi-burst-engine/wasm"]  # WASM builds without tokio

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

