[package]
name = "feagi-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FEAGI Service Layer - Stable application boundary for transport adapters"

[lib]
crate-type = ["rlib"]
name = "feagi_services"

[dependencies]
# Core FEAGI crates (backend)
feagi-npu-neural = { version = "0.0.0", path = "../feagi-npu/neural" }  # For types
feagi-evo = { version = "0.0.0", path = "../feagi-evo" }
feagi-bdu = { version = "0.0.0", path = "../feagi-bdu", default-features = false }
feagi-npu-burst-engine = { version = "0.0.0", path = "../feagi-npu/burst-engine", default-features = false, optional = true }
feagi-connectome-serialization = { version = "0.0.0", path = "../feagi-connectome-serialization", optional = true }
# feagi-io dependency removed to break circular dependency
# AgentRegistry and types moved to feagi-services
feagi-data-structures = { workspace = true }

# Async runtime (optional for embedded)
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "time", "rt-multi-thread"], optional = true }

# Synchronization
parking_lot = "0.12"

# Serialization (for DTOs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
feagi-observability = { workspace = true }
tracing = "0.1"  # Required for tracing macros

# Error handling
thiserror.workspace = true

# Logging (replaced by feagi-observability)
# log = "0.4"  # Removed - use feagi-observability instead

# Time/date
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = ["std", "connectome-io"]
std = ["tokio", "feagi-bdu/async-tokio", "feagi-npu-burst-engine/async-tokio"]  # Enable async for server deployments
no_std = []      # Disable async for embedded/RTOS
wasm = ["feagi-bdu/wasm", "feagi-npu-burst-engine/wasm"]  # WASM builds without tokio
connectome-io = ["feagi-connectome-serialization", "feagi-npu-burst-engine/connectome-io"]  # Connectome export/import functionality

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

